# Tic-Tac-Toe

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: expected.json  test_presentation.py  test_tcp.py
tests/controller/: test_mark_utils.py
tests/model/: test_board.py  test_game.py  test_game_object.py
tic_tac_toe/: __init__.py  __main__.py  log.py  utils.py  view.py
tic_tac_toe/controller/: __init__.py  local.py  mark_utils.py
tic_tac_toe/model/: __init__.py  board.py  game.py  game_object.py  grid.py
tic_tac_toe/remote/: __init__.py  presentation.py  tcp.py
tic_tac_toe/remote/centralised/: __init__.py
